--- a/ReServer/ReServer.csproj
+++ b/ReServer/ReServer.csproj
@@ -14,7 +14,7 @@
     <ProjectReference Include="..\..\WebSystemTools\ConfigurationEncrypt\ConfigurationEncrypt.csproj" />
     <ProjectReference Include="..\..\WebSystemTools\SerilogLogger\SerilogLogger.csproj" />
     <ProjectReference Include="..\..\WebSystemTools\SwaggerTools\SwaggerTools.csproj" />
-    <ProjectReference Include="..\..\WebSystemTools\TestToolsMini\TestToolsMini.csproj" />
+    <ProjectReference Include="..\..\WebSystemTools\TestToolsApi\TestToolsApi.csproj" />
     <ProjectReference Include="..\..\WebSystemTools\WindowsServiceTools\WindowsServiceTools.csproj" />
   </ItemGroup>
 
