--- a/ReServer/ReServer.csproj
+++ b/ReServer/ReServer.csproj
@@ -13,6 +13,7 @@
     <ProjectReference Include="..\..\ToolsManagement\LibToolActions\LibToolActions.csproj" />
     <ProjectReference Include="..\..\WebSystemTools\ApiExceptionHandler\ApiExceptionHandler.csproj" />
     <ProjectReference Include="..\..\WebSystemTools\ConfigurationEncrypt\ConfigurationEncrypt.csproj" />
+    <ProjectReference Include="..\..\WebSystemTools\HttpClientInstaller\HttpClientInstaller.csproj" />
     <ProjectReference Include="..\..\WebSystemTools\SerilogLogger\SerilogLogger.csproj" />
     <ProjectReference Include="..\..\WebSystemTools\SwaggerTools\SwaggerTools.csproj" />
     <ProjectReference Include="..\..\WebSystemTools\TestToolsApi\TestToolsApi.csproj" />
