--- a/ReServer/ReServer.csproj
+++ b/ReServer/ReServer.csproj
@@ -7,13 +7,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Figgle.Fonts" Version="0.6.5" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\..\ApAgentData\LibApAgentData\LibApAgentData.csproj" />
     <ProjectReference Include="..\..\ParametersManagement\LibParameters\LibParameters.csproj" />
     <ProjectReference Include="..\..\SystemTools\SystemToolsShared\SystemToolsShared.csproj" />
     <ProjectReference Include="..\..\ToolsManagement\LibToolActions\LibToolActions.csproj" />
     <ProjectReference Include="..\..\WebSystemTools\ApiExceptionHandler\ApiExceptionHandler.csproj" />
     <ProjectReference Include="..\..\WebSystemTools\ConfigurationEncrypt\ConfigurationEncrypt.csproj" />
-    <ProjectReference Include="..\..\WebSystemTools\HttpClientInstaller\HttpClientInstaller.csproj" />
     <ProjectReference Include="..\..\WebSystemTools\SerilogLogger\SerilogLogger.csproj" />
     <ProjectReference Include="..\..\WebSystemTools\SwaggerTools\SwaggerTools.csproj" />
     <ProjectReference Include="..\..\WebSystemTools\TestToolsApi\TestToolsApi.csproj" />
