--- a/ReServer/ReServer.csproj
+++ b/ReServer/ReServer.csproj
@@ -7,16 +7,18 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Figgle.Fonts" Version="0.6.5" />
+    <PackageReference Include="Figgle.Fonts" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\ApAgentData\LibApAgentData\LibApAgentData.csproj" />
-    <ProjectReference Include="..\..\ParametersManagement\LibParameters\LibParameters.csproj" />
-    <ProjectReference Include="..\..\SystemTools\SystemToolsShared\SystemToolsShared.csproj" />
-    <ProjectReference Include="..\..\ToolsManagement\LibToolActions\LibToolActions.csproj" />
+    <ProjectReference Include="..\..\ApAgentData\ApAgentData.LibApAgentData\ApAgentData.LibApAgentData.csproj" />
+    <ProjectReference Include="..\..\ParametersManagement\ParametersManagement.LibParameters\ParametersManagement.LibParameters.csproj" />
+    <ProjectReference Include="..\..\ToolsManagement\ToolsManagement.LibToolActions\ToolsManagement.LibToolActions.csproj" />
+    <ProjectReference Include="..\..\WebSystemTools\ApiExceptionHandler\ApiExceptionHandler.csproj" />
     <ProjectReference Include="..\..\WebSystemTools\ConfigurationEncrypt\ConfigurationEncrypt.csproj" />
     <ProjectReference Include="..\..\WebSystemTools\SerilogLogger\SerilogLogger.csproj" />
+    <ProjectReference Include="..\..\WebSystemTools\SwaggerTools\SwaggerTools.csproj" />
+    <ProjectReference Include="..\..\WebSystemTools\TestToolsApi\TestToolsApi.csproj" />
     <ProjectReference Include="..\..\WebSystemTools\WindowsServiceTools\WindowsServiceTools.csproj" />
   </ItemGroup>
 
